# hello-world

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
3rd/tinyxml/: tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
3rd/tinyxml/docs/: doxygen.css  tutorial0.html
3rd/tinyxml2/: Makefile  readme  tinyxml.cpp  tinyxml.h  xmltest.cpp
include/: base.h
src/: base.cpp  main.cpp
